# SMADIMO-GP-3

./: .gitignore  README.md  main.py  pyproject.toml
docs/: PROJECT_DOCUMENTATION.md
src/: __init__.py  agent.py  main.py  prompts.py  tools.py  user_feedback.py
src/smadimo_agent/: __init__.py  cli.py  config.py  io_utils.py  ml_tools.py  prompts.py  state.py  workflow.py
