[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smadimo-agent"
version = "0.1.0"
description = "LangChain + LangGraph ML agent for autonomous classical ML workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.4.2",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "numpy>=1.26.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.1",
    "typing-extensions>=4.12.2",
]

[project.scripts]
smadimo-agent = "smadimo_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
